CI now only running on important file changed
who needs a ci run on changed README 💀

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,6 +3,11 @@ name: Android CI
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - '**.md'
+      - '**.png'
+      - '**.jpg'
+      - 'docs/**'
   pull_request:
     branches: [ "main" ]
 
